棺桶との押し戻しの当たり判定

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -121,12 +121,15 @@
     <ClCompile Include="Application\SourceCode\Character.cpp" />
     <ClCompile Include="Application\SourceCode\Cloud.cpp" />
     <ClCompile Include="Application\SourceCode\Club.cpp" />
+    <ClCompile Include="Application\SourceCode\Coffin.cpp" />
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp" />
     <ClCompile Include="Application\SourceCode\DefaultCamera.cpp" />
     <ClCompile Include="Application\SourceCode\DOF.cpp" />
     <ClCompile Include="Application\SourceCode\DrinkMotion.cpp" />
     <ClCompile Include="Application\SourceCode\EffectManager.cpp" />
+    <ClCompile Include="Application\SourceCode\FieldData.cpp" />
     <ClCompile Include="Application\SourceCode\Field.cpp" />
+    <ClCompile Include="Application\SourceCode\FieldDataManager.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\GaussianBlur.cpp" />
@@ -255,12 +258,15 @@
     <ClInclude Include="Application\SourceCode\Character.h" />
     <ClInclude Include="Application\SourceCode\Cloud.h" />
     <ClInclude Include="Application\SourceCode\Club.h" />
+    <ClInclude Include="Application\SourceCode\Coffin.h" />
     <ClInclude Include="Application\SourceCode\CollisionManager.h" />
     <ClInclude Include="Application\SourceCode\DefaultCamera.h" />
     <ClInclude Include="Application\SourceCode\DOF.h" />
     <ClInclude Include="Application\SourceCode\DrinkMotion.h" />
     <ClInclude Include="Application\SourceCode\EffectManager.h" />
+    <ClInclude Include="Application\SourceCode\FieldData.h" />
     <ClInclude Include="Application\SourceCode\Field.h" />
+    <ClInclude Include="Application\SourceCode\FieldDataManager.h" />
     <ClInclude Include="Application\SourceCode\GaugeParam.h" />
     <ClInclude Include="Application\SourceCode\GaugeType.h" />
     <ClInclude Include="Application\SourceCode\GaugeUI.h" />
