--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -651,6 +651,12 @@
     <ClCompile Include="Application\SourceCode\FieldData.cpp">
       <Filter>Application\Source\Field</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Collision\ColliderObject.cpp">
+      <Filter>NewEngine\Source\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Collision\ColliderDrawer.cpp">
+      <Filter>NewEngine\Source\Collision</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -1079,6 +1085,12 @@
     <ClInclude Include="Application\SourceCode\FieldData.h">
       <Filter>Application\Header\Field</Filter>
     </ClInclude>
+    <ClInclude Include="NewEngine\Collision\ColliderDrawer.h">
+      <Filter>NewEngine\Header\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Collision\ColliderObject.h">
+      <Filter>NewEngine\Header\Collision</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="NewEngine\Shader\Blur.hlsli">
@@ -1167,6 +1179,9 @@
     </None>
     <None Include="Application\Shader\Branch.hlsli">
       <Filter>Shader\Application\Branch</Filter>
+    </None>
+    <None Include="NewEngine\Shader\ColliderObject.hlsli">
+      <Filter>Shader\Engine</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -1337,6 +1352,12 @@
     </FxCompile>
     <FxCompile Include="Application\Shader\BranchPS.hlsl">
       <Filter>Shader\Application\Branch</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\ColliderObjectVS.hlsl">
+      <Filter>Shader\Engine</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\ColliderObjectPS.hlsl">
+      <Filter>Shader\Engine</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
