--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Application\SourceCode\ItemBoxUI.cpp" />
     <ClCompile Include="Application\SourceCode\ItemBoxUIManager.cpp" />
     <ClCompile Include="Application\SourceCode\ItemUI.cpp" />
+    <ClCompile Include="Application\SourceCode\ITransition.cpp" />
     <ClCompile Include="Application\SourceCode\IWeaponMotion.cpp" />
     <ClCompile Include="Application\SourceCode\LogoutMenu.cpp" />
     <ClCompile Include="Application\SourceCode\MenuManager.cpp" />
@@ -174,6 +175,7 @@
     <ClCompile Include="Application\SourceCode\Task.cpp" />
     <ClCompile Include="Application\SourceCode\TitleUI.cpp" />
     <ClCompile Include="Application\SourceCode\MessageUI.cpp" />
+    <ClCompile Include="Application\SourceCode\TransitionManager.cpp" />
     <ClCompile Include="Application\SourceCode\Tree.cpp" />
     <ClCompile Include="Application\SourceCode\UIManager.cpp" />
     <ClCompile Include="Application\SourceCode\Vignette.cpp" />
@@ -284,6 +286,7 @@
     <ClInclude Include="Application\SourceCode\ItemBoxUI.h" />
     <ClInclude Include="Application\SourceCode\ItemBoxUIManager.h" />
     <ClInclude Include="Application\SourceCode\ItemUI.h" />
+    <ClInclude Include="Application\SourceCode\ITransition.h" />
     <ClInclude Include="Application\SourceCode\IWeaponMotion.h" />
     <ClInclude Include="Application\SourceCode\LogoutMenu.h" />
     <ClInclude Include="Application\SourceCode\MenuManager.h" />
@@ -318,6 +321,7 @@
     <ClInclude Include="Application\SourceCode\Task.h" />
     <ClInclude Include="Application\SourceCode\TitleUI.h" />
     <ClInclude Include="Application\SourceCode\MessageUI.h" />
+    <ClInclude Include="Application\SourceCode\TransitionManager.h" />
     <ClInclude Include="Application\SourceCode\Tree.h" />
     <ClInclude Include="Application\SourceCode\UIManager.h" />
     <ClInclude Include="Application\SourceCode\Vignette.h" />
