--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -15,6 +15,143 @@ Size=561,199
 Collapsed=0
 DockId=0x00000001,1
 
+[Window][Debug Manager]
+Pos=1115,334
+Size=351,248
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=324,170
+Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=161,341
+Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=100,219
+Size=500,440
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=389,248
+Size=339,307
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=219,398
+Size=977,418
+Collapsed=0
+
+[Window][Loaded Window]
+Pos=446,105
+Size=669,684
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=586,179
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=81,215
+Size=643,902
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=44,208
+Size=572,109
+Collapsed=0
+
+[Window][Example: Log]
+Pos=50,350
+Size=500,400
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=130,310
+Size=430,450
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=172,241
+Size=609,944
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
 [Docking][Data]
 DockNode  ID=0x00000001 Pos=1217,43 Size=567,342 Selected=0x9BB92E70
 
