--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="NewEngine\Collision\Grass.cpp" />
     <ClCompile Include="NewEngine\Collision\ICollider.cpp" />
     <ClCompile Include="NewEngine\Collision\SkyIsland.cpp" />
+    <ClCompile Include="NewEngine\DebugManager.cpp" />
     <ClCompile Include="NewEngine\Gui\GuiManager.cpp" />
     <ClCompile Include="NewEngine\Input\InputManager.cpp" />
     <ClCompile Include="NewEngine\Input\JoypadInput.cpp" />
@@ -334,6 +335,7 @@
     <ClInclude Include="NewEngine\Collision\Grass.h" />
     <ClInclude Include="NewEngine\Collision\ICollider.h" />
     <ClInclude Include="NewEngine\Collision\SkyIsland.h" />
+    <ClInclude Include="NewEngine\DebugManager.h" />
     <ClInclude Include="NewEngine\Gui\GuiManager.h" />
     <ClInclude Include="NewEngine\Input\InputManager.h" />
     <ClInclude Include="NewEngine\Input\JoypadInput.h" />
