--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Application\SourceCode\FieldData.cpp" />
     <ClCompile Include="Application\SourceCode\Field.cpp" />
     <ClCompile Include="Application\SourceCode\FieldDataManager.cpp" />
+    <ClCompile Include="Application\SourceCode\Gate.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp" />
     <ClCompile Include="Application\SourceCode\GaugeUI.cpp" />
     <ClCompile Include="Application\SourceCode\GaussianBlur.cpp" />
@@ -278,6 +279,7 @@
     <ClInclude Include="Application\SourceCode\FieldData.h" />
     <ClInclude Include="Application\SourceCode\Field.h" />
     <ClInclude Include="Application\SourceCode\FieldDataManager.h" />
+    <ClInclude Include="Application\SourceCode\Gate.h" />
     <ClInclude Include="Application\SourceCode\GaugeParam.h" />
     <ClInclude Include="Application\SourceCode\GaugeType.h" />
     <ClInclude Include="Application\SourceCode\GaugeUI.h" />
